Fixed gridlayout spacing value.
svn changeset:4813/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
+++ b/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
@@ -24,8 +24,8 @@
 }
 
 .i-gridlayout-spacing .i-gridlayout-cell {
-	padding-left: 15px;
-	padding-top:15px;
+	padding-left: 8px;
+	padding-top: 8px;
 }
 
 .i-gridlayout-spacing .i-gridlayout-firstcol {
